<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".coroutine.DemoSimpleCoroutineAct">

    <!-- Introduction Text -->
    <TextView
        android:id="@+id/txtIntro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_simple_coroutine_instruction"
        android:textSize="14sp"
        android:textColor="#444444"
        android:textAlignment="center"
        android:lineSpacingExtra="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <!-- Load Data Button -->
    <Button
        android:id="@+id/btnFetch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_simple_coroutine_btn_load_user_data"
        app:layout_constraintTop_toBottomOf="@id/txtIntro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <!-- User Info Display -->
    <TextView
        android:id="@+id/txtUserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_simple_coroutine_tv_loading"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnFetch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Back Button -->
    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/exit_button_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
